out.txt
main.cpp:62:55: error: invalid operands to binary expression ('vector<unsigned int>::iterator' (aka 'iterator<unsigned int, std::random_access_iterator_tag>') and 'ft::vector<unsigned int, std::__1::allocator<unsigned int> >::iterator' (aka 'iterator<unsigned int, std::random_access_iterator_tag>'))
                for (vector<unsigned>::iterator it = v3.begin(); it != v3.end(); ++it) {
                                                                 ~~ ^  ~~~~~~~~
./iterator.hpp:143:9: note: candidate function not viable: expects an l-value for 1st argument
                        bool operator!=(iterator & rhs)
                             ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/system_error:420:1: note: candidate function not viable: no known conversion from 'vector<unsigned int>::iterator' (aka 'iterator<unsigned int, std::random_access_iterator_tag>') to 'const std::__1::error_code' for 1st argument
operator!=(const error_code& __x, const error_code& __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/system_error:425:1: note: candidate function not viable: no known conversion from 'vector<unsigned int>::iterator' (aka 'iterator<unsigned int, std::random_access_iterator_tag>') to 'const std::__1::error_code' for 1st argument
operator!=(const error_code& __x, const error_condition& __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/system_error:430:1: note: candidate function not viable: no known conversion from 'vector<unsigned int>::iterator' (aka 'iterator<unsigned int, std::random_access_iterator_tag>') to 'const std::__1::error_condition' for 1st argument
operator!=(const error_condition& __x, const error_code& __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/system_error:435:1: note: candidate function not viable: no known conversion from 'vector<unsigned int>::iterator' (aka 'iterator<unsigned int, std::random_access_iterator_tag>') to 'const std::__1::error_condition' for 1st argument
operator!=(const error_condition& __x, const error_condition& __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:588:1: note: candidate template ignored: could not match 'pair' against 'iterator'
operator!=(const pair<_T1,_T2>& __x, const pair<_T1,_T2>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:728:1: note: candidate template ignored: could not match 'reverse_iterator' against 'iterator'
operator!=(const reverse_iterator<_Iter1>& __x, const reverse_iterator<_Iter2>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:950:1: note: candidate template ignored: could not match 'istream_iterator' against 'iterator'
operator!=(const istream_iterator<_Tp, _CharT, _Traits, _Distance>& __x,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:1051:6: note: candidate template ignored: could not match 'istreambuf_iterator' against 'iterator'
bool operator!=(const istreambuf_iterator<_CharT,_Traits>& __a,
     ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:1169:1: note: candidate template ignored: could not match 'move_iterator' against 'iterator'
operator!=(const move_iterator<_Iter1>& __x, const move_iterator<_Iter2>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:1545:1: note: candidate template ignored: could not match '__wrap_iter' against 'iterator'
operator!=(const __wrap_iter<_Iter1>& __x, const __wrap_iter<_Iter2>& __y) _NOEXCEPT_DEBUG
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:1577:1: note: candidate template ignored: could not match '__wrap_iter' against 'iterator'
operator!=(const __wrap_iter<_Iter1>& __x, const __wrap_iter<_Iter1>& __y) _NOEXCEPT_DEBUG
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:1991:6: note: candidate template ignored: could not match 'allocator' against 'iterator'
bool operator!=(const allocator<_Tp>&, const allocator<_Up>&) _NOEXCEPT {return false;}
     ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:2969:1: note: candidate template ignored: could not match 'unique_ptr' against 'iterator'
operator!=(const unique_ptr<_T1, _D1>& __x, const unique_ptr<_T2, _D2>& __y) {return !(__x == __y);}
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:3016:1: note: candidate template ignored: could not match 'unique_ptr' against 'iterator'
operator!=(const unique_ptr<_T1, _D1>& __x, nullptr_t) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:3024:1: note: candidate template ignored: could not match 'unique_ptr' against 'iterator'
operator!=(nullptr_t, const unique_ptr<_T1, _D1>& __x) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:4804:1: note: candidate template ignored: could not match 'shared_ptr' against 'iterator'
operator!=(const shared_ptr<_Tp>& __x, const shared_ptr<_Up>& __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:4866:1: note: candidate template ignored: could not match 'shared_ptr' against 'iterator'
operator!=(const shared_ptr<_Tp>& __x, nullptr_t) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:4874:1: note: candidate template ignored: could not match 'shared_ptr' against 'iterator'
operator!=(nullptr_t, const shared_ptr<_Tp>& __x) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__functional_03:1579:1: note: candidate template ignored: could not match 'function' against 'iterator'
operator!=(const function<_Fp>& __f, nullptr_t) {return (bool)__f;}
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/__functional_03:1584:1: note: candidate template ignored: could not match 'function' against 'iterator'
operator!=(nullptr_t, const function<_Fp>& __f) {return (bool)__f;}
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string_view:643:6: note: candidate template ignored: could not match 'basic_string_view' against 'iterator'
bool operator!=(basic_string_view<_CharT, _Traits> __lhs, basic_string_view<_CharT, _Traits> __rhs) _NOEXCEPT
     ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string_view:652:6: note: candidate template ignored: could not match 'basic_string_view' against 'iterator'
bool operator!=(basic_string_view<_CharT, _Traits> __lhs,
     ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string_view:662:6: note: candidate template ignored: could not match 'basic_string_view' against 'iterator'
bool operator!=(typename common_type<basic_string_view<_CharT, _Traits> >::type __lhs, 
     ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:569:6: note: candidate template ignored: could not match 'fpos' against 'iterator'
bool operator!=(const fpos<_StateT>& __x, const fpos<_StateT>& __y)
     ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:3892:1: note: candidate template ignored: could not match 'basic_string' against 'iterator'
operator!=(const basic_string<_CharT,_Traits,_Allocator>& __lhs,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:3901:1: note: candidate template ignored: could not match 'const _CharT *' against 'vector<unsigned int>::iterator' (aka 'iterator<unsigned int, std::random_access_iterator_tag>')
operator!=(const _CharT* __lhs,
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:3910:1: note: candidate template ignored: could not match 'basic_string' against 'iterator'
operator!=(const basic_string<_CharT, _Traits, _Allocator>& __lhs,
^
1 error generated.
make: *** [main.o] Error 1
